[package]
name = "asterisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "0.20"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"

